Bug 815126 - [Dialer] The Call Log appearance breaks if more than 1 call to a very long name contact (r=fcampo) (re-squashed).

--- a/apps/communications/dialer/style/commslog.css
+++ b/apps/communications/dialer/style/commslog.css
@@ -200,10 +200,7 @@ ul[role="tablist"][data-type="filter"] > [role="tab"].selected > a {
 }
 
 .primary-info-main {
-  overflow: hidden;
-  text-overflow: ellipsis;
   display: inline-block;
-  white-space: nowrap;
   padding-right: 0.6rem;
 }
 
